--- a/Service/css/faq.css
+++ b/Service/css/faq.css
@@ -1,7 +1,5 @@
 .faq {
     display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 20px;
     margin-top: 20px;
 }
@@ -9,6 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    flex:1;
 }
 .faq-item {
     display: flex;
@@ -20,7 +19,6 @@
     align-items: center;
 }
 .faq-item-text {
-    gap: 30px;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -32,6 +30,9 @@
 }
 .faq-item-answer {
     border-top: 1px solid #262626;
+}
+.faq-item-answer{
+    display: none;
 }
 .faq-item-answer p {
     font-weight: 400;
@@ -49,4 +50,144 @@
     justify-content: center;
     align-items: center;
     background-color: #1F1F1F;
+    align-self: start;
+}
+.faq-icon2 {
+    width: 95px;
+    height: 52px;
+    border-radius: 100px;
+    border: 1px solid #333333;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F1F1F;
+    align-self: start;
+    display: none;
+}
+#faq1:checked ~ .faq-item-text .faq-item-answer {
+    display: block;
+}
+#faq1:checked ~ .faq-item-text .faq-item-question p {
+    margin-bottom: 30px;
+}
+#faq1:checked ~ .faq-icon {
+    display: none;
+}
+#faq1:checked ~ .faq-icon2 {
+display: flex;
+}
+#faq2:checked ~ .faq-item-text .faq-item-answer {
+    display: block;
+}
+#faq2:checked ~ .faq-item-text .faq-item-question p {
+    margin-bottom: 30px;
+}
+#faq2:checked ~ .faq-icon {
+    display: none;
+}
+#faq2:checked ~ .faq-icon2 {
+    display: flex;
+}
+#faq3:checked ~ .faq-item-text .faq-item-answer {
+    display: block;
+}
+#faq3:checked ~ .faq-item-text .faq-item-question p {
+    margin-bottom: 30px;
+}
+#faq3:checked ~ .faq-icon {
+    display: none;
+}
+#faq3:checked ~ .faq-icon2 {
+    display: flex;
+}
+#faq4:checked ~ .faq-item-text .faq-item-answer {
+    display: block;
+}
+#faq4:checked ~ .faq-item-text .faq-item-question p {
+    margin-bottom: 30px;
+}
+#faq4:checked ~ .faq-icon {
+    display: none;
+}
+#faq4:checked ~ .faq-icon2 {
+    display: flex;
+}
+#faq5:checked ~ .faq-item-text .faq-item-answer {
+    display: block;
+}
+#faq5:checked ~ .faq-item-text .faq-item-question p {
+    margin-bottom: 30px;
+}
+#faq5:checked ~ .faq-icon {
+    display: none;
+}
+#faq5:checked ~ .faq-icon2 {
+    display: flex;
+}
+.faq-form {
+    width: 760px;
+    border-radius: 14px;
+    padding: 60px;
+    gap: 50px;
+    background-color: #1A1A1A;
+    height: fit-content;
+}
+.faq-form-title {
+    border-bottom: 1px solid #262626;
+    margin-bottom: 50px;
+}
+.faq-form-title h3 {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 150%;
+    color: #F9EFEC;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+}
+.form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+.form-group label {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: #F3DFD8;
+    margin-bottom: 10px;
+}
+.form-group input {
+    border-radius: 10px;
+    font-size: 18px;
+    padding: 24px;
+    border: none;
+    outline: none;
+    background-color: #0F0F0F;
+    color: #676665;
+}
+textarea {
+    padding: 24px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    background-color: #0F0F0F;
+    color: #676665;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 150%;
+}
+.btn {
+    border-radius: 12px;
+    background-color: #CE7D63;
+    padding: 18px 24px;
+    border: none;
+    outline: none;
+    color: #0F0F0F;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 150%;
+    width: 100%;
+    margin-top: 50px;
 }
