--- a/Service/css/footer.css
+++ b/Service/css/footer.css
@@ -51,3 +51,30 @@
     line-height: 150%;
     color: #B3B3B2;
 }
+.footer-right-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    gap: 60px;
+    padding: 60px;
+    background-color: #1A1A1A;
+}
+.footer-right-menu-item {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.footer-menu-title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 100%;
+    color: #F3DFD8;
+}
+.footer-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    margin-top: 30px;
+    color: #81807E;
+}
